--- a/config/database.yml
+++ b/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: devdeck_development
+  database: pocket_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: devdeck
+  #username: pocket
 
   # The password associated with the postgres role (username).
   #password:
@@ -55,9 +55,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: devdeck_test
+# test:
+#   <<: *default
+#   database: pocket_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -81,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: devdeck_production
-  username: devdeck
-  password: <%= ENV['DEVDECK_DATABASE_PASSWORD'] %>
+  database: pocket_production
+  username: pocket
+  password: <%= ENV['POCKET_DATABASE_PASSWORD'] %>
