--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-qrcode-logo": "^2.7.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-tilt": "^0.1.4",
     "sass": "^1.49.11"
   },
   "scripts": {
